Kubernetes/jmaze-k8s-cilium/cilium/hubble_http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
    - hubble.local.julianmaze.com
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: local-subdomain # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
          kind: Service
